--- a/v2.0.0/index.html
+++ b/v2.0.0/index.html
@@ -51,7 +51,7 @@ H("Main", 0,
     v("VertMain",
         h("Top", "20px", 0,
             I("File","File", "bluepoint", 50, drop("Drop1", menuObj)),
-            I("Edit","Edit", "bluepoint", 50, drop("Drop2", menuObj2)),
+            I("Edit","Edit", "bluepoint", 50, context("Drop2", menuObj2)),
             I("Space","","bblue", S("Test",{maps:["w"]}))
         ),
         I()
