modal and Spawn working

--- a/v2.0.0/index.html
+++ b/v2.0.0/index.html
@@ -12,6 +12,10 @@
     background-color: blue;
     cursor: pointer;
 }
+/* .ew {
+    background-color: black;
+    cursor: ew-resize;
+} */
 /* div{outline: 1px solid black} */
 </style>
 <head>
@@ -52,7 +56,7 @@ H("Main", 0,
         h("Top", "20px", 0,
             I("File","File", "bluepoint", 50, drop("Drop1", menuObj)),
             I("Edit","Edit", "bluepoint", 50, context("Drop2", menuObj2)),
-            I("Space","","bblue", S("Test",{maps:["w"]}))
+            I("Space","","bblue")
         ),
         I()
         // h("Hleft",
