--- a/v2.0.0/index.html
+++ b/v2.0.0/index.html
@@ -61,9 +61,9 @@ var menuObj2 = {
                 threeE:{fourE:function(){console.log("FourE")}},
             }
 H("main",
-    h("mainHor",
-        I("left", "left", "400px", db(100,500)),
-        I("right", "right")
+    v("mainHor",
+        I("left", "left"),
+        I("right", "right", "400px", db(100,"500px"))
     )
 )
     
