--- a/v2.0.0/index.html
+++ b/v2.0.0/index.html
@@ -12,9 +12,9 @@
     background-color: blue;
     cursor: pointer;
 }
-/* .test{
-    background-color:rgb(187, 187, 187);
-} */
+.test{
+    background-color:rgb(180, 240, 165);
+}
 /* .ew {
     background-color: black;
     cursor: ew-resize;
