started new stuff

--- a/v2.0.0/index.html
+++ b/v2.0.0/index.html
@@ -41,6 +41,7 @@
         <script src="js/Modal.js"></script>
         <script src="js/Drag.js"></script>
         <script src="js/Designer.js"></script>
+        <script src="js/Docs.js"></script>
 </head>
 <body style="overflow: hidden;" >
     <!-- <table id="page" width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -57,17 +58,17 @@
 </body>
 </html>
 <script>
-var menuObj = {
-                one:function(){console.log("One")},
-                two:function(){console.log("Two")},
-                three:{four:function(){console.log("Four")}},
-            }
-var menuObj2 = {
-                oneE:function(){console.log("OneE")},
-                twoE:function(){console.log("TwoE")},
-                threeE:{fourE:function(){console.log("FourE")}},
-            }
-var x=new Designer();
+// var menuObj = {
+//                 one:function(){console.log("One")},
+//                 two:function(){console.log("Two")},
+//                 three:{four:function(){console.log("Four")}},
+//             }
+// var menuObj2 = {
+//                 oneE:function(){console.log("OneE")},
+//                 twoE:function(){console.log("TwoE")},
+//                 threeE:{fourE:function(){console.log("FourE")}},
+//             }
+// var x=new Designer();
 // H("main",
 //     v("mainHor",
 //         I("left", "left"),
